Fixes #4075: overflow in book box in html.

--- a/src/wolnelektury/static/scss/book_text/book_box.scss
+++ b/src/wolnelektury/static/scss/book_text/book_box.scss
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     overflow: visible;
-    max-width: 488px;
+    max-width: 560px;
 
     .book-box .book-box-inner {
         border: none;
